Bug 201797. Do an extra reflow of the scrollframe if we adjusted the width or height after reflowing it the first time. Also, don't include border/padding when calculating the visible width in the unconstrained case